Haha, JDK 16 Go BRRR(#32)
* Create Dockerfile

* Update piepline for Docker image build

* jdk 16 code optimizations

* smaller docker image

* cleanups